syntax="proto3";

service EnvioArchivos{
    rpc descargarArchivo(Filerequest) returns (stream Filechunk);

    rpc mandarArchivo(FileRequest) returns (status);
}

message FileRequest {
  string file_name = 1;
}

message status {
  bool success = 1; 
  string message = 2;
}

message FileChunk {
  bytes data = 1;        // Los datos del archivo en binario
  string file_name = 2;  // Nombre del archivo
}
